fix(sideNav nestedPages): add consistent capitalization for text, the same as in the old version of
and fix typo that messed up colors for sideMenu

issue #8

--- a/src/app/layout/nav/side-nav/_side-nav.scss
+++ b/src/app/layout/nav/side-nav/_side-nav.scss
@@ -50,6 +50,7 @@
 
       h4 {
         font-size: $base-font-size;
+        text-transform: uppercase;
       }
 
       .icon {
