--- a/src/app/layout/nav/side-nav/pages/_nested-pages.scss
+++ b/src/app/layout/nav/side-nav/pages/_nested-pages.scss
@@ -9,6 +9,7 @@
     }
     &__page-title, &__button-back {
       color: $side-nav-color;
+      text-transform: uppercase;
     }
 
     &__item-container {
